# node-install-rust-binary

./: .gitignore  Cargo.toml  README.md  bin  package.json
fixtures/sample/js/: package.json
fixtures/sample/rs/: package.json
src/: lib.rs  package_json.rs  pairable.rs  url_context.rs  url_relative_file.rs  version.rs
tests/: mod.rs
