[package]
name = "install-rust-binary"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
target-lexicon = "0.12.5"
clap = { version = "4.0.29", features = ["derive"] }
url = { version = "2.3.1", features = ["serde"] }
tokio = { version = "1.23.0", features = ["rt-multi-thread"] }
serde = { version = "1.0.149", features = ["derive"] }
once_cell = "1.16.0"
reqwest = { version = "0.11.13", features = ["json"] }
tempdir = "0.3.7"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
