[package]
name = "install-rust-binary"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
target-lexicon = "0.12.5"
clap = { version = "4.0.29", features = ["derive"] }
url = { version = "2.3.1", features = ["serde"] }
tokio = { version = "1.23.0", features = ["rt-multi-thread"] }
serde = { version = "1.0.149", features = ["derive"] }
once_cell = "1.16.0"
reqwest = { version = "0.11.13", features = ["json"] }
tempdir = "0.3.7"
copy_dir = "0.1.2"
tinytemplate = "1.2.1"
version = "3.0.0"
serde_json = "1.0.89"
derive_more = "0.99.17"
cached-path = "0.5.3"
futures = "0.3.25"
log = "0.4.17"
simple_logger = "4.0.0"
console_log = "0.2.0"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["channel-api", "napi-6", "promise-api"]
